# quando

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.claude/skills/calendar-method-add/: SKILL.md
.github/workflows/: ci.yml  publish.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  index.md
search/: search_index.json
src/quando/: __init__.py  _calendar.py  _checks.py  _convert.py  _io.py  _navigate.py  _parse.py  _periods.py  _ranges.py  _settlement.py  _state.py  _timezone.py  _validate.py
tests/: conftest.py  test_calendar.py  test_checks.py  test_convert.py  test_io.py  test_navigate.py  test_parse.py  test_periods.py  test_ranges.py  test_settlement.py  test_state.py  test_timezone.py  test_validate.py
