[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quando"
version = "0.1.0"
description = "Time translation & holiday tracking for backtesting pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "calendar", "trading", "datetime", "backtesting"]
dependencies = [
    "exchange-calendars>=4.0",
    "python-dateutil>=2.8",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quando"]

[tool.pytest.ini_options]
testpaths = ["tests"]
