[project]
name = "quando"
version = "0.1.0"
description = "Time translation & holiday tracking for backtesting pipelines"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Antônio Salomão", email = "83646729+aexsalomao@users.noreply.github.com" }
]
keywords = ["finance", "calendar", "trading", "datetime", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "exchange-calendars>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/aexsalomao/quando"
Repository = "https://github.com/aexsalomao/quando"
Issues = "https://github.com/aexsalomao/quando/issues"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B904", # raise-without-from-inside-except — sometimes intentional
]

[tool.ruff.lint.isort]
known-first-party = ["quando"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["quando"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
